--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -1,3 +1,9 @@
 <!D0CTYPE html>
 <html lang="en">
-  
+    <head>
+	<meta charset=“UTF-8”>
+    </head>
+
+   <body>
+    <h1>garlic bread recipe</h1>
+   </body>
