--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -7,3 +7,25 @@
    <body>
     <h1>garlic bread recipe</h1>
    </body>
+  <h1>Odin Recipes</h1>
+  <a href="lasagna.html">lasagna recipe</a>
+  <img src"https://public-assets.meredithcorp.io/57170809f7e448f8e08ab3bb28c12371/165983335013FB6C80-A234-4102-9B8A-814150D3BD08.jpeg">
+  <p>This garlic bread recipe incorporates savory flavors such as butter and garlic along with piquant mozzarella cheese.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>½ cup butter</li>
+    <li>1½ tablespoons garlic powder</li>
+    <li>1 tablespoon dried parsley</li>
+    <li>1 (1 pound) loaf italian bread, cut into ½ inch slices</li>
+    <li>1 (8 ounces) package shredded mozzarella cheese</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+     <li>Melt butter in a small saucepan over medium heat; stir in garlic powder and dried parsley.</li>
+      <li>Place bread slices on a medium baking sheet. Using a basting brush, brush bread generously with melted butter mixture.</li>
+      <li>Bake in the preheated oven until lightly toasted, about 10 minutes.</li>
+        <li>Sprinkle bread with mozzarella cheese and any remaining butter mixture. Continue baking until cheese is melted and bread is lightly browned, about 5 minutes.</li>
+  </ol>
+</body>
+</html>
