--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -8,7 +8,7 @@
     <h1>garlic bread recipe</h1>
    </body>
   <h1>Odin Recipes</h1>
-  <a href="lasagna.html">lasagna recipe</a>
+  <a href="garlicbread.html">garlic bread recipe</a>
   <img src"https://public-assets.meredithcorp.io/57170809f7e448f8e08ab3bb28c12371/165983335013FB6C80-A234-4102-9B8A-814150D3BD08.jpeg">
   <p>This garlic bread recipe incorporates savory flavors such as butter and garlic along with piquant mozzarella cheese.</p>
   <h2>Ingredients</h2>
