--- a/index.html
+++ b/index.html
@@ -6,4 +6,8 @@
 <title>Recipe Website</title>
 <body>
   <h1>Odin Recipes</h1>
+      <ul>
+            <li><a href="recipes/lasagnarecipe.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/garlicbreadrecipe.html">Garlic Bread Recipe</a></li>
+            <li><a href="recipes/breadstickrecipe.html">Breadstick Recipe</a></li>
 </body>
