--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Odin Recipes</h1>
       <ul>
-            <li><a href="recipes/lasagnarecipe.html">Lasagna Recipe</a></li>
-            <li><a href="recipes/garlicbreadrecipe.html">Garlic Bread Recipe</a></li>
-            <li><a href="recipes/breadstickrecipe.html">Breadstick Recipe</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/garlicbread.html">Garlic Bread Recipe</a></li>
+            <li><a href="recipes/breadsticks.html">Breadstick Recipe</a></li>
 </body>
