--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!D0CTYPE html>
-
-<html lang="eng"
+<html>
       <head>
-<meta charset="UTF-8">
+            <html lang="eng"
+            <meta charset="utf-8">
 <title>Recipe Website</title>
-<body>
+      </head>
+      <body>
   <h1>Odin Recipes</h1>
       <ul>
             <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
             <li><a href="recipes/garlicbread.html">Garlic Bread Recipe</a></li>
             <li><a href="recipes/breadsticks.html">Breadstick Recipe</a></li>
+     </ul>
 </body>
+            </html>
